feat: schedule daily builds to keep clawdbot up to date
Rebuilds at 6am UTC daily to pick up latest clawdbot npm releases

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    # Rebuild daily at 6am UTC to pick up new clawdbot releases
+    - cron: '0 6 * * *'
   workflow_dispatch:
     inputs:
       clawdbot_version:
